[gd_scene load_steps=49 format=2]

[ext_resource path="res://Resources/Players/Dog/Idle (6).png" type="Texture" id=1]
[ext_resource path="res://Resources/Players/Cat/Run (3).png" type="Texture" id=2]
[ext_resource path="res://Resources/Players/Dog/Run (4).png" type="Texture" id=3]
[ext_resource path="res://Resources/Players/Cat/Idle (8).png" type="Texture" id=4]
[ext_resource path="res://Resources/Players/Cat/Idle (9).png" type="Texture" id=5]
[ext_resource path="res://Resources/Players/Cat/Idle (10).png" type="Texture" id=6]
[ext_resource path="res://Resources/Players/Dog/Run (1).png" type="Texture" id=7]
[ext_resource path="res://Resources/Players/Dog/Idle (9).png" type="Texture" id=8]
[ext_resource path="res://Resources/Players/Dog/Idle (3).png" type="Texture" id=9]
[ext_resource path="res://Resources/Players/Cat/Idle (1).png" type="Texture" id=10]
[ext_resource path="res://Resources/Players/Cat/Idle (2).png" type="Texture" id=11]
[ext_resource path="res://Resources/Players/Cat/Idle (5).png" type="Texture" id=12]
[ext_resource path="res://Resources/Players/Dog/Idle (7).png" type="Texture" id=13]
[ext_resource path="res://Resources/Players/Dog/Idle (8).png" type="Texture" id=14]
[ext_resource path="res://Resources/Players/Cat/Idle (3).png" type="Texture" id=15]
[ext_resource path="res://Resources/Players/Dog/Run (5).png" type="Texture" id=16]
[ext_resource path="res://Resources/Players/Cat/Idle (7).png" type="Texture" id=17]
[ext_resource path="res://Resources/Players/Cat/Idle (6).png" type="Texture" id=18]
[ext_resource path="res://Resources/Players/Dog/Run (2).png" type="Texture" id=19]
[ext_resource path="res://Resources/Players/Cat/Idle (4).png" type="Texture" id=20]
[ext_resource path="res://Resources/Players/Dog/Run (3).png" type="Texture" id=21]
[ext_resource path="res://Resources/Players/Dog/Idle (4).png" type="Texture" id=22]
[ext_resource path="res://Resources/Players/Dog/Idle (10).png" type="Texture" id=23]
[ext_resource path="res://Resources/Players/Dog/Idle (5).png" type="Texture" id=24]
[ext_resource path="res://Player.gd" type="Script" id=25]
[ext_resource path="res://Resources/Players/Cat/Run (2).png" type="Texture" id=26]
[ext_resource path="res://Resources/Players/Cat/Run (5).png" type="Texture" id=27]
[ext_resource path="res://Resources/Players/Dog/Run (6).png" type="Texture" id=28]
[ext_resource path="res://Resources/Players/Dog/Run (7).png" type="Texture" id=29]
[ext_resource path="res://Resources/Players/Dog/Run (8).png" type="Texture" id=30]
[ext_resource path="res://Resources/Players/Cat/Run (4).png" type="Texture" id=31]
[ext_resource path="res://Resources/Players/Cat/Run (6).png" type="Texture" id=32]
[ext_resource path="res://Resources/Players/Cat/Run (7).png" type="Texture" id=33]
[ext_resource path="res://Resources/Players/Cat/Run (8).png" type="Texture" id=34]
[ext_resource path="res://PcPlayer.gd" type="Script" id=35]
[ext_resource path="res://Resources/Scene/Mushroom.png" type="Texture" id=36]
[ext_resource path="res://Resources/Scene/Background.png" type="Texture" id=37]
[ext_resource path="res://Resources/Players/Cat/Run (1).png" type="Texture" id=38]
[ext_resource path="res://Resources/Scene/GroundGreen.png" type="Texture" id=39]
[ext_resource path="res://Resources/Players/Dog/Idle (1).png" type="Texture" id=40]
[ext_resource path="res://Resources/Players/Dog/Idle (2).png" type="Texture" id=41]
[ext_resource path="res://RunningRace2d.gd" type="Script" id=42]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=3]
0/name = "GroundGreen.png 0"
0/texture = ExtResource( 39 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.75, 55.5 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 9 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 1 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 23 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 38 ), ExtResource( 26 ), ExtResource( 2 ), ExtResource( 31 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 25, 21 )

[node name="RunningRace2D" type="Node"]
script = ExtResource( 42 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -17.0
margin_right = 1056.0
texture = ExtResource( 37 )
expand = true
stretch_mode = 2

[node name="Road" type="TileMap" parent="."]
position = Vector2( 0, 70 )
scale = Vector2( 0.75, 0.75 )
tile_set = SubResource( 3 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524301, 0, 0, 524303, 0, 0, 524305, 0, 0, 524307, 0, 0, 524309, 0, 0, 524311, 0, 0, 524313, 0, 0, 524315, 0, 0, 524317, 0, 0, 524319, 0, 0, 524321, 0, 0, 524323, 0, 0, 524325, 0, 0, 524327, 0, 0, 524329, 0, 0 )

[node name="PcPlayer" type="KinematicBody2D" parent="."]
position = Vector2( 125, 230 )
script = ExtResource( 35 )
__meta__ = {
"_edit_group_": true
}

[node name="PcPlayerShape" type="CollisionShape2D" parent="PcPlayer"]
shape = SubResource( 1 )

[node name="PcPlayerAnimatedSprite" type="AnimatedSprite" parent="PcPlayer"]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 6 )
animation = "Idle"
offset = Vector2( 25, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 125, 400 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 25 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerShape" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="PlayerAnimatedSprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 5 )
animation = "Idle"
offset = Vector2( 25, 0 )

[node name="Mushroom" type="StaticBody2D" parent="."]
position = Vector2( 900, 415 )
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mushroom"]
shape = SubResource( 7 )

[node name="Mushroom" type="Sprite" parent="Mushroom"]
texture = ExtResource( 36 )

[node name="StartGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -35.0
margin_right = 134.0
margin_bottom = 35.0
text = "Start Game"

[node name="ReplayGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -35.0
margin_right = 134.0
margin_bottom = 35.0
text = "Restart Game"

[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="ReplayGameButton" to="." method="_on_ReplayGameButton_pressed"]
